--- a/packages/sage-assets/lib/stylesheets/components/_dot.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dot.scss
@@ -5,7 +5,7 @@
 ////
 
 $-sage-dot-size: rem(6px);
-$-sage-dot-color: var(--pine-color-black);
+$-sage-dot-color: var(--pine-color-brand);
 $-sage-dot-gap: sage-spacing(2xs);
 $-sage-dot-size--badge: rem(6px);
 
