--- a/packages/sage-assets/lib/stylesheets/components/_tag.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tag.scss
@@ -5,7 +5,7 @@
 ////
 
 $-tag-image-size: rem(24px);
-$-tag-button-color: var(--pine-color-grey-950);
+$-tag-button-color: var(--pine-color-text-active);
 $-tag-button-icon-size: rem(18px);
 $-tag-button-icon-mobile-size: rem(24px);
 
@@ -15,11 +15,11 @@ $-tag-button-icon-mobile-size: rem(24px);
   display: inline-flex;
   align-items: center;
   padding: sage-spacing(3xs) sage-spacing(xs) sage-spacing(3xs) sage-spacing(xs);
-  background-color: var(--pine-color-grey-200);
+  background-color: var(--pine-color-border-disabled);
   border-radius: sage-border(radius-x-large);
 
   &:hover {
-    background-color: var(--pine-color-grey-300);
+    background-color: var(--pine-color-border);
   }
 
   pds-icon {
@@ -84,5 +84,5 @@ $-tag-button-icon-mobile-size: rem(24px);
 }
 
 .sage-tag__value {
-  color: var(--pine-color-grey-950);
+  color: var(--pine-color-text-active);
 }
