fix: update semantic tokens names

--- a/docs/lib/sage-frontend/stylesheets/docs/_specs.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_specs.scss
@@ -7,7 +7,7 @@
 .sage-specs {
   th {
     padding: 4px;
-    color: var(--pine-color-text-readonly);
+    color: var(--pine-color-text-muted);
     border-block-end: 1px solid var(--pine-color-border-hover);
   }
 
