--- a/packages/sage-assets/lib/stylesheets/components/_badge.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_badge.scss
@@ -28,7 +28,7 @@ $badge-sentiments: (
   --pine-chip-color-success-dot: var(--pine-color-green-600);
   --pine-chip-color-success-hover: var(--pine-color-green-300);
   --pine-chip-color-success: var(--pine-color-green-100);
-  --pine-chip-color-neutral-dot: var(--pine-color-grey-600);
+  --pine-chip-color-neutral-dot: var(--pine-color-text-tertiary);
   --pine-chip-color-neutral-hover: var(--pine-color-grey-300);
   --pine-chip-color-neutral: var(--pine-color-grey-100);
   --pine-chip-color-info-dot: var(--pine-color-blue-600);
