--- a/packages/sage-assets/lib/stylesheets/components/_breadcrumbs.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_breadcrumbs.scss
@@ -33,7 +33,7 @@ $-breadcrumb-outline-color: var(--pine-color-purple-600);
   &:not(:last-child) {
     &::after {
       content: "/";
-      color: var(--pine-color-text-readonly);
+      color: var(--pine-color-text-muted);
     }
 
     .sage-breadcrumbs--progressbar &::after {
