--- a/packages/sage-assets/lib/stylesheets/global/_reboot.scss
+++ b/packages/sage-assets/lib/stylesheets/global/_reboot.scss
@@ -209,7 +209,7 @@ caption {
   caption-side: bottom;
   padding-block-start: 0.75rem;
   padding-block-end: 0.75rem;
-  color: var(--pine-color-text-readonly);
+  color: var(--pine-color-text-muted);
   text-align: start;
 }
 
