--- a/docs/lib/sage-frontend/stylesheets/docs/_status_key.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_status_key.scss
@@ -52,7 +52,7 @@
     margin-inline-start: sage-spacing(xs);
     font-size: sage-font-size(body-sm);
     font-weight: sage-font-weight(semibold);
-    color: var(--pine-color-grey-700);
+    color: var(--pine-color-text-muted);
   }
 
   @media screen and (min-width: sage-breakpoint(lg-min)) {
