--- a/packages/sage-assets/lib/stylesheets/components/_chart_legend.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_chart_legend.scss
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   list-style: none;
-  color: var(--pine-color-text-readonly);
+  color: var(--pine-color-text-muted);
 
   &::before {
     content: "";
