--- a/packages/sage-assets/lib/stylesheets/components/_empty_state.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_empty_state.scss
@@ -99,5 +99,5 @@ $-empty-state-icon-compact-size: rem(56px);
 
 .sage-empty-state__text,
 .sage-empty-state__custom-content {
-  color: var(--pine-color-text-readonly);
+  color: var(--pine-color-text-muted);
 }
