--- a/packages/sage-assets/lib/stylesheets/components/_feature_toggle.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_feature_toggle.scss
@@ -56,7 +56,7 @@ $-feature-toggle-image-height-mobile: rem(96px);
 
   p {
     @extend %t-sage-body-small;
-    color: var(--pine-color-text-readonly);
+    color: var(--pine-color-text-muted);
   }
 }
 
