--- a/packages/sage-assets/lib/stylesheets/components/_form_section.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_section.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   gap: sage-spacing(sm);
-  color: var(--pine-color-text-readonly);
+  color: var(--pine-color-text-muted);
 }
 
 .sage-form-section__subtitle--legacy {
