fix: lint error fix

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -889,6 +889,6 @@ a.sage-btn {
 
   .sage-btn--primary:hover {
     background-color: var(--pine-color-white);
-    border: var(--pine-border)
+    border: var(--pine-border);
   }
 }
