--- a/packages/sage-assets/lib/stylesheets/components/_badge.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_badge.scss
@@ -174,6 +174,7 @@ $badge-sentiments: (
 }
 
 [data-theme="dark"] {
+  /* stylelint-disable declaration-no-important */
   :is(.sage-badge--draft, .sage-badge--draft .sage-dot) .sage-badge__value-text {
     color: var(--pine-color-grey-900) !important;
   }
@@ -181,6 +182,7 @@ $badge-sentiments: (
   .sage-badge--draft .sage-dot::before {
     background-color: var(--pine-color-grey-900) !important;
   }
+  /* stylelint-enable declaration-no-important */
 }
 
 .sage-badge-group {
