fix: remove yarn dependancy

--- a/packages/sage-assets/lib/stylesheets/components/_popover.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_popover.scss
@@ -61,6 +61,10 @@ $-popover-tooltip-inactive: $-popover-tooltip-width solid transparent;
 
   [data-theme="dark"] & {
     border: var(--pine-border);
+
+    &::after {
+      display: none;
+    }
   }
 
   .sage-popover--is-expanded & {
