fix: update hero custom bg example

--- a/packages/sage-assets/lib/stylesheets/components/_hero.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_hero.scss
@@ -105,7 +105,7 @@ $-hero-play-icon-background-color: var(--pine-color-background-container);
   }
 
   .sage-hero--custom-background-color & {
-    color: var(--pine-color-text-secondary);
+    color: var(--pine-color-grey-900);
   }
 }
 
