style: updated alerts and banner to core tokens

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -755,7 +755,7 @@ a.sage-btn {
   }
 
   .sage-alert &.sage-btn--primary {
-    color: var(--pine-color-primary);
+    color: var(--pine-color-grey-900);
   }
 
   .sage-assistant & {
