--- a/packages/sage-assets/lib/stylesheets/components/_badge.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_badge.scss
@@ -182,7 +182,14 @@ $badge-sentiments: (
   .sage-badge--draft .sage-dot::before {
     background-color: var(--pine-color-grey-900) !important;
   }
+
+  .sage-badge__value-text,
+  .sage-badge__decor-icon {
+    color: var(--pine-color-grey-900) !important;
+  }
   /* stylelint-enable declaration-no-important */
+
+
 }
 
 .sage-badge-group {
