--- a/packages/sage-assets/lib/stylesheets/components/_banner.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_banner.scss
@@ -19,7 +19,7 @@ $-banner-colors: (
     text: var(--pine-color-grey-950),
     text-hover: var(--pine-color-text-secondary),
     icon: "info-circle-filled",
-    icon-color: var(--pine-color-text-muted),
+    icon-color: var(--pine-color-grey-700),
   ),
   warning: (
     background: var(--pine-color-yellow-400),
