fix: update alert and button color

--- a/packages/sage-assets/lib/stylesheets/components/_link.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_link.scss
@@ -164,7 +164,7 @@ $-link-base-styles: (
 }
 
 [data-theme="dark"] {
-  .sage-link--secondary {
+  .sage-alert .sage-link--secondary {
     color: var(--pine-color-grey-900);
   }
 }
